fixed dark mode share and copy icons

--- a/style.css
+++ b/style.css
@@ -106,5 +106,9 @@ body.dark .heading-text{
 .icon {
   cursor: pointer;
   font-size: 1.2em;
+  color: black;
 }
 
+body.dark .icon{
+  color: white;
+}
